--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,20 @@
       <div class="composer">
         <textarea id="input" placeholder="Describe an incident (text) or paste a JSON incident bundle. Tip: if you paste a template prompt, put the real details after 'Incident:'. Ctrl+Enter to send."
           rows="3"></textarea>
+        <div class="quickbar">
+          <button id="commandsBtn" class="btn">Commands</button>
+          <label class="quick-select">
+            <span class="sr-only">Sample incident</span>
+            <select id="sampleSelect" aria-label="Sample incidents">
+              <option value="cred_dump" selected>Sample: Credential dumping</option>
+              <option value="phishing">Sample: Phishing → OAuth token theft</option>
+              <option value="lateral">Sample: Lateral movement</option>
+              <option value="web_attack">Sample: Web attack</option>
+            </select>
+          </label>
+          <button id="loadSampleBtn" class="btn">Load sample</button>
+          <button id="copyCaseBtn" class="btn ghost" disabled>Copy case id</button>
+        </div>
         <div class="composer-actions">
           <button id="sendBtn" class="btn primary">Send</button>
           <button id="clearBtn" class="btn ghost">Clear</button>
@@ -158,6 +172,39 @@
 
 
   <script src="/static/app.js"></script>
+
+  <div id="modal" class="modal hidden" aria-hidden="true">
+    <div class="modal-backdrop" id="modalBackdrop"></div>
+    <div class="modal-card" role="dialog" aria-modal="true" aria-label="Commands and samples">
+      <div class="modal-head">
+        <div class="modal-title">Commands & Samples</div>
+        <button id="modalClose" class="btn ghost">Close</button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-grid">
+          <div class="card">
+            <div class="card-title">Commands</div>
+            <div id="commandsList" class="list mono">/help
+/reset
+/last
+/case &lt;id&gt;
+/iocs [id|last]
+/mitre [id|last]
+/timeline [id|last]
+/export [id|last]</div>
+            <div class="muted tiny">Tip: paste JSON to skip triage questions.</div>
+          </div>
+          <div class="card">
+            <div class="card-title">How to Write an Incident</div>
+            <div class="list muted">
+              Include: affected host(s), timeframe, what was observed, indicators (IPs/domains/URLs/hashes), and what controls alerted (EDR/SIEM).
+            </div>
+            <div class="muted tiny">Example: “On pc-hr-01, winword.exe spawned powershell.exe; EDR flagged credential dumping. dc-01 shows 15 login failures for j.smith in 10 minutes.”</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
