--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI‑SOC Host Agent</title>
-  <link rel="stylesheet" href="/static/styles.css" />
+  <link rel="stylesheet" href="/static/styles.css?v=2" />
   <!-- Add this to your <head> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
     </div>
   </header>
 
-  <main class="layout layout-3col">
+  <main class="layout layout-2col">
     <aside class="rail rail-left">
       <section class="panel">
         <div class="panel-head">
@@ -85,93 +85,11 @@
       </div>
     </section>
 
-    <aside class="rail rail-right">
-      <section class="panel">
-        <div class="panel-head">
-          <div class="panel-title">Covert Timing Lab</div>
-          <div class="panel-meta">
-            <span class="muted">Goal:</span>
-            <span>measure BER</span>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="card">
-              <div class="controls">
-                <label class="control control-wide">
-                  <span class="control-label">Channel</span>
-                  <select id="covertChannel">
-                    <option value="timing" selected>Timing (latency)</option>
-                    <option value="storage">Storage (extra fields)</option>
-                    <option value="size">Size (payload length)</option>
-                  </select>
-                </label>
-
-                <label class="control">
-                  <span class="control-label">Pattern</span>
-                  <select id="bitsPattern">
-                    <option value="alternating" selected>Alternating 0101…</option>
-                  <option value="random">Random</option>
-                  <option value="zeros">All 0s</option>
-                  <option value="ones">All 1s</option>
-                  <option value="custom">Custom</option>
-                </select>
-              </label>
-
-                <label class="control">
-                  <span class="control-label">Bits</span>
-                  <input id="bitsLen" type="number" min="8" max="256" value="64" />
-                </label>
-
-                <label class="control control-wide">
-                  <span class="control-label">Custom bits (optional)</span>
-                  <input id="bitsCustom" type="text" placeholder="010110..." />
-                </label>
-
-                <label class="control">
-                  <span class="control-label">Min response (ms)</span>
-                  <input id="minRespMs" type="number" min="0" max="5000" value="400" />
-                </label>
-
-              <label class="control">
-                <span class="control-label">Jitter low/high (ms)</span>
-                <div class="row">
-                  <input id="jitterLow" type="number" min="0" max="5000" value="10" />
-                  <input id="jitterHigh" type="number" min="0" max="5000" value="40" />
-                </div>
-              </label>
-
-              <label class="control toggle">
-                <input id="compareMode" type="checkbox" checked />
-                <span>Compare baseline vs defended</span>
-              </label>
-
-              <label class="control toggle">
-                <input id="serverBits" type="checkbox" checked />
-                <span>Generate “secret token” server-side (recommended)</span>
-              </label>
-
-              <div class="row right">
-                <button id="covertBtn" class="btn">Run</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">Results</div>
-            <div id="covertSummary" class="kpis muted">Run an experiment to see metrics.</div>
-            <div id="tokenNote" class="note muted">
-              Demo note: this lab uses a simulated “secret token” generated server-side (random bits). The actual bits are not shown; only a token id (hash) is displayed.
-            </div>
-            <canvas id="covertChart" class="chart" width="560" height="160" aria-label="Covert experiment chart"></canvas>
-            <div id="covert" class="list muted">Run to see decode metrics (BER) and per-bit latency.</div>
-          </div>
-        </div>
-      </section>
-    </aside>
+    <!-- Covert lab UI removed: covert channel triggers automatically during agent communication -->
   </main>
 
 
-  <script src="/static/app.js"></script>
+  <script src="/static/app.js?v=2"></script>
 
   <div id="modal" class="modal hidden" aria-hidden="true">
     <div class="modal-backdrop" id="modalBackdrop"></div>
