--- a/web/case.html
+++ b/web/case.html
@@ -64,7 +64,7 @@
           <div id="reportBox" class="list muted">—</div>
         </div>
         <div class="card">
-          <div class="card-title">Covert Analysis</div>
+          <div class="card-title">Covert Channel</div>
           <div id="covertCaseBox" class="list muted">—</div>
         </div>
         <div class="card">
