--- a/web/index.html
+++ b/web/index.html
@@ -151,6 +151,10 @@
                 <option value="assistant_work">Sample: Work schedule (Mon–Fri)</option>
                 <option value="assistant_everyday">Sample: Every day at 9</option>
                 <option value="assistant_search">Sample: Search + edit</option>
+                <option value="assistant_next">Sample: What's next?</option>
+                <option value="assistant_week">Sample: Show my week</option>
+                <option value="assistant_busy">Sample: How busy today?</option>
+                <option value="assistant_remind">Sample: Remind me to...</option>
               </select>
             </label>
             <button id="loadSampleBtn" class="btn">Load sample</button>
